<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jfilhogn.mnemoapp.Desenvolvedores"
    tools:showIn="@layout/activity_about">

    <TextView
        android:text="@string/design"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/textView7"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <ImageView
        android:layout_width="179dp"
        android:layout_height="117dp"
        app:srcCompat="@mipmap/ic_mnemoapp"
        android:id="@+id/imageView2"
        android:layout_marginTop="43dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/contato_contato_com_br"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView6"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:textSize="18sp" />

    <TextView
        android:text="@string/desenvolvimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:id="@+id/textView8"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/jo_o_martins_filho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView9"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:textSize="20sp" />

    <TextView
        android:text="@string/joaomfilho1995_gmail_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView10"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:textSize="18sp" />

    <TextView
        android:text="@string/debson_picinin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:textSize="20sp"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
